Added batch, semester, sub_code, timetable finished or not
Added :
+ Classroom Batch
+ Subject:  Semester & subject code
+ Timetable set: Finished
+ Updated all the above fields in html, forms and views.

--- a/attendance/templates/classroom/edit_classroom.html
+++ b/attendance/templates/classroom/edit_classroom.html
@@ -98,6 +98,7 @@
 <h5>Classroom Id :<small>{{get_obj.id}}</small></h5>
 <h5>Classroom :<small class="capitalize">{{get_obj}}</small></h5>
 <h5>Tutor :<small>{{get_obj.tutor}}</small></h5>
+<h5>Batch :<small>{{get_obj.batch}}</small></h5>
 
 <div class="modal fade" id="edit-modal">
     <div class="modal-dialog modal-dialog-centered">
