--- a/attendance/templates/subject/HourList.html
+++ b/attendance/templates/subject/HourList.html
@@ -16,6 +16,9 @@
 		{{ class_obj }}
 	</h5>
 </section>
+<section class="pl-md-4 d-flex flex-column flex-md-row font-weight-bold text-danger">
+	**semester select field needs to be added
+</section>
 <article class="row d-flex justify-content-center justify-content-md-start my-3 mx-0 mx-md-4">
 	{% for hour,sub_count in hour_obj %}
 	<section class="card card_box_shadow border_white mb-4 mx-2 m-md-2" style="width: 16.5rem;">
