--- a/attendance/templates/subject/HourEdit.html
+++ b/attendance/templates/subject/HourEdit.html
@@ -37,6 +37,11 @@
 			<div class="form-group col-md-6 pl-md-2">
 				{{ f.handled_by|as_crispy_field }}
 			</div>
+			<div class="form-group col-md-6 pr-md-2">
+				{{ f.sub_code|as_crispy_field }}
+			</div>
+			<div class="form-group col-md-6 pl-md-2">
+			</div>
 		</section>
 		{% endfor %}
 		<div
