--- a/attendance/templates/subject/create_hour.html
+++ b/attendance/templates/subject/create_hour.html
@@ -34,6 +34,9 @@
 			<div class="form-group col-md-6 pl-md-2">
 				{{ form.hour_type|as_crispy_field }}
 			</div>
+			<div class="form-group col-md-6 pr-md-2">
+				{{ form.semester|as_crispy_field }}
+			</div>
 		</section>
 		{% csrf_token %}
 		{{ formset.management_form }}
@@ -45,6 +48,9 @@
 			</div>
 			<div class="form-group col-md-6 pl-md-2">
 				{{ f.handled_by|as_crispy_field }}
+			</div>
+			<div class="form-group col-md-6 pr-md-2">
+				{{ f.sub_code|as_crispy_field }}
 			</div>
 		</section>
 		{% endfor %}
