--- a/attendance/static/css/style.css
+++ b/attendance/static/css/style.css
@@ -39,16 +39,16 @@ html {
 
 body {
   background-color: #daeaf6;
-  font-family: 'Karla', sans-serif !important;
+  font-family: "Karla", sans-serif !important;
 }
 
 /* Font Family */
 .karla {
-  font-family: 'Karla', sans-serif;
+  font-family: "Karla", sans-serif;
 }
 
 .arvo {
-  font-family: 'Arvo', serif;
+  font-family: "Arvo", serif;
 }
 
 /* Colors */
@@ -96,7 +96,7 @@ body {
 .requiredField {
   color: #062743;
   font-size: 1.1rem;
-  font-family: 'arvo';
+  font-family: "arvo";
 }
 
 .invalid-feedback {
@@ -118,8 +118,8 @@ body {
 
 .btn-cust:focus {
   outline: none !important;
-  -webkit-box-shadow: 5px 5px 10px #c2d0db,  -5px -5px 10px #e5f6ff;
-          box-shadow: 5px 5px 10px #c2d0db,  -5px -5px 10px #e5f6ff;
+  -webkit-box-shadow: 5px 5px 10px #c2d0db, -5px -5px 10px #e5f6ff;
+  box-shadow: 5px 5px 10px #c2d0db, -5px -5px 10px #e5f6ff;
 }
 
 .btn-cust:active {
@@ -129,7 +129,7 @@ body {
 .cust_date {
   margin-top: 3px;
   font-size: 1.1rem;
-  font-family: 'Karla', sans-serif;
+  font-family: "Karla", sans-serif;
   -webkit-transition: all 0.4s;
   transition: all 0.4s;
   color: #062743 !important;
@@ -137,14 +137,14 @@ body {
   border: 1px solid #c9d7e2;
   border-color: #daeaf6 !important;
   border-radius: 2rem !important;
-  -webkit-box-shadow: inset 5px 5px 10px #c2d0db, inset -5px -5px 10px #daeaf6;
-          box-shadow: inset 5px 5px 10px #c2d0db, inset -5px -5px 10px #daeaf6;
+  -webkit-box-shadow: inset 5px 5px 10px #c2d0db, inset -5px -5px 10px #daeaf6;
+  box-shadow: inset 5px 5px 10px #c2d0db, inset -5px -5px 10px #daeaf6;
 }
 
 .cust_date:focus {
   outline: none !important;
-  -webkit-box-shadow: 5px 5px 10px #c2d0db,  -5px -5px 10px #e5f6ff;
-          box-shadow: 5px 5px 10px #c2d0db,  -5px -5px 10px #e5f6ff;
+  -webkit-box-shadow: 5px 5px 10px #c2d0db, -5px -5px 10px #e5f6ff;
+  box-shadow: 5px 5px 10px #c2d0db, -5px -5px 10px #e5f6ff;
   border: 1px solid #c9d7e2;
   cursor: pointer;
 }
@@ -157,8 +157,8 @@ body {
 
 .cust_date:hover {
   color: #062743;
-  -webkit-box-shadow: 5px 5px 10px #c2d0db,  -5px -5px 10px #e5f6ff;
-          box-shadow: 5px 5px 10px #c2d0db,  -5px -5px 10px #e5f6ff;
+  -webkit-box-shadow: 5px 5px 10px #c2d0db, -5px -5px 10px #e5f6ff;
+  box-shadow: 5px 5px 10px #c2d0db, -5px -5px 10px #e5f6ff;
   border: 1px solid #c9d7e2;
   cursor: pointer;
 }
@@ -167,15 +167,15 @@ body {
 .neu_icon {
   -webkit-transition: all 0.4s;
   transition: all 0.4s;
-  -webkit-box-shadow: 5px 5px 10px #c2d0db,  -5px -5px 10px #e5f6ff;
-          box-shadow: 5px 5px 10px #c2d0db,  -5px -5px 10px #e5f6ff;
+  -webkit-box-shadow: 5px 5px 10px #c2d0db, -5px -5px 10px #e5f6ff;
+  box-shadow: 5px 5px 10px #c2d0db, -5px -5px 10px #e5f6ff;
 }
 
 .neu_icon:hover {
   color: #062743;
   font-size: 1.05rem;
-  -webkit-box-shadow: inset 5px 5px 10px #c2d0db,  inset -5px -5px 10px #e5f6ff;
-          box-shadow: inset 5px 5px 10px #c2d0db,  inset -5px -5px 10px #e5f6ff;
+  -webkit-box-shadow: inset 5px 5px 10px #c2d0db, inset -5px -5px 10px #e5f6ff;
+  box-shadow: inset 5px 5px 10px #c2d0db, inset -5px -5px 10px #e5f6ff;
 }
 
 @media screen and (min-width: 768px) {
@@ -193,14 +193,14 @@ body {
 .search_cust {
   margin-top: 3px;
   font-size: 1.1rem;
-  font-family: 'Karla', sans-serif;
+  font-family: "Karla", sans-serif;
   color: #062743 !important;
   background-color: #daeaf6 !important;
   border: 1px solid #c9d7e2;
   border-color: #daeaf6 !important;
   border-radius: 2rem !important;
-  -webkit-box-shadow: inset 5px 5px 10px #c2d0db, inset -5px -5px 10px #daeaf6;
-          box-shadow: inset 5px 5px 10px #c2d0db, inset -5px -5px 10px #daeaf6;
+  -webkit-box-shadow: inset 5px 5px 10px #c2d0db, inset -5px -5px 10px #daeaf6;
+  box-shadow: inset 5px 5px 10px #c2d0db, inset -5px -5px 10px #daeaf6;
   border-right: 0px;
   -webkit-transition: all 0.4s;
   transition: all 0.4s;
@@ -208,28 +208,28 @@ body {
 
 .search_cust:focus {
   outline: none !important;
-  font-size: 1.150rem !important;
+  font-size: 1.15rem !important;
   -webkit-box-shadow: 0 0 0 0.1rem #c2d0db;
-          box-shadow: 0 0 0 0.1rem #c2d0db;
+  box-shadow: 0 0 0 0.1rem #c2d0db;
   cursor: context-menu !important;
 }
 
 .search_cust:hover {
   cursor: pointer;
-  font-size: 1.150rem;
+  font-size: 1.15rem;
 }
 
 .rounded_custom_left {
   margin-top: 3px;
   font-size: 1.1rem;
-  font-family: 'Karla', sans-serif;
+  font-family: "Karla", sans-serif;
   color: #062743 !important;
   background-color: #daeaf6 !important;
   border: 1px solid #c9d7e2;
   border-color: #daeaf6 !important;
   border-radius: 2rem !important;
-  -webkit-box-shadow: inset 5px 5px 10px #c2d0db, inset -5px -5px 10px #daeaf6;
-          box-shadow: inset 5px 5px 10px #c2d0db, inset -5px -5px 10px #daeaf6;
+  -webkit-box-shadow: inset 5px 5px 10px #c2d0db, inset -5px -5px 10px #daeaf6;
+  box-shadow: inset 5px 5px 10px #c2d0db, inset -5px -5px 10px #daeaf6;
   border-top-right-radius: 0rem !important;
   border-bottom-right-radius: 0rem !important;
   border-right: 0px;
@@ -239,28 +239,28 @@ body {
 
 .rounded_custom_left:focus {
   outline: none !important;
-  font-size: 1.150rem !important;
+  font-size: 1.15rem !important;
   -webkit-box-shadow: 0 0 0 0.1rem #c2d0db;
-          box-shadow: 0 0 0 0.1rem #c2d0db;
+  box-shadow: 0 0 0 0.1rem #c2d0db;
   cursor: context-menu !important;
 }
 
 .rounded_custom_left:hover {
   cursor: pointer;
-  font-size: 1.150rem;
+  font-size: 1.15rem;
 }
 
 .rounded_custom_right {
   margin-top: 3px;
   font-size: 1.1rem;
-  font-family: 'Karla', sans-serif;
+  font-family: "Karla", sans-serif;
   color: #062743 !important;
   background-color: #daeaf6 !important;
   border: 1px solid #c9d7e2;
   border-color: #daeaf6 !important;
   border-radius: 2rem !important;
-  -webkit-box-shadow: inset 2px 2px 3px #b3c0ca,  inset -2px -2px 3px #b3c0ca;
-          box-shadow: inset 2px 2px 3px #b3c0ca,  inset -2px -2px 3px #b3c0ca;
+  -webkit-box-shadow: inset 2px 2px 3px #b3c0ca, inset -2px -2px 3px #b3c0ca;
+  box-shadow: inset 2px 2px 3px #b3c0ca, inset -2px -2px 3px #b3c0ca;
   border-top-left-radius: 0rem !important;
   border-bottom-left-radius: 0rem !important;
   border-left: 0px;
@@ -278,16 +278,16 @@ body {
   transition: 0.5 ease;
   background-color: #daeaf6;
   border-radius: 2rem !important;
-  -webkit-box-shadow: 8px 8px 20px #aebbc5,  -8px -8px 20px #daeaf6;
-          box-shadow: 8px 8px 20px #aebbc5,  -8px -8px 20px #daeaf6;
+  -webkit-box-shadow: 8px 8px 20px #aebbc5, -8px -8px 20px #daeaf6;
+  box-shadow: 8px 8px 20px #aebbc5, -8px -8px 20px #daeaf6;
 }
 
 #left_side_bar .side_bar .side_bar_title {
   padding: 12px 50px 5px 50px;
-  letter-spacing: .05em;
+  letter-spacing: 0.05em;
   pointer-events: none;
   cursor: default;
-  font-size: .7875rem;
+  font-size: 0.7875rem;
   text-transform: uppercase;
   color: #062743;
   font-weight: 600;
@@ -299,8 +299,8 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   padding: 10px 50px 10px 50px;
   font-size: 1rem;
   position: relative;
@@ -339,7 +339,7 @@ body {
     height: 100%;
     border-radius: 0 !important;
     -webkit-box-shadow: none !important;
-            box-shadow: none !important;
+    box-shadow: none !important;
   }
   #left_side_bar .side_bar .list-group-item {
     display: list-item;
@@ -350,8 +350,8 @@ body {
   #left_side_bar .side_bar .list-group .side_bar_link {
     padding: 12px 50px 12px 50px;
     -webkit-box-pack: start;
-        -ms-flex-pack: start;
-            justify-content: start;
+    -ms-flex-pack: start;
+    justify-content: start;
     border-bottom: 0.5px solid #fff;
   }
 }
@@ -373,10 +373,10 @@ body {
 /* Right-side Main Content */
 #main_content {
   -ms-flex-preferred-size: 0;
-      flex-basis: 0;
+  flex-basis: 0;
   -webkit-box-flex: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1;
+  -ms-flex-positive: 1;
+  flex-grow: 1;
   position: relative;
   width: 100%;
 }
@@ -393,25 +393,25 @@ body {
 .input_cust {
   margin-top: 3px;
   font-size: 1.1rem;
-  font-family: 'Karla', sans-serif;
+  font-family: "Karla", sans-serif;
   color: #062743 !important;
   background-color: #daeaf6 !important;
   border: 1px solid #c9d7e2;
   border-radius: 2rem !important;
-  -webkit-box-shadow: inset 5px 5px 10px #c2d0db, inset -5px -5px 10px #daeaf6;
-          box-shadow: inset 5px 5px 10px #c2d0db, inset -5px -5px 10px #daeaf6;
+  -webkit-box-shadow: inset 5px 5px 10px #c2d0db, inset -5px -5px 10px #daeaf6;
+  box-shadow: inset 5px 5px 10px #c2d0db, inset -5px -5px 10px #daeaf6;
 }
 
 .input_cust:focus {
   border: 2px solid #c9d7e2;
   outline: none !important;
-  -webkit-box-shadow: inset 5px 5px 10px #c2d0db,  inset -5px -5px 10px #e5f6ff;
-          box-shadow: inset 5px 5px 10px #c2d0db,  inset -5px -5px 10px #e5f6ff;
+  -webkit-box-shadow: inset 5px 5px 10px #c2d0db, inset -5px -5px 10px #e5f6ff;
+  box-shadow: inset 5px 5px 10px #c2d0db, inset -5px -5px 10px #e5f6ff;
 }
 
 .input_cust:hover {
-  -webkit-box-shadow: inset 5px 5px 10px #c2d0db,  inset -5px -5px 10px #e5f6ff;
-          box-shadow: inset 5px 5px 10px #c2d0db,  inset -5px -5px 10px #e5f6ff;
+  -webkit-box-shadow: inset 5px 5px 10px #c2d0db, inset -5px -5px 10px #e5f6ff;
+  box-shadow: inset 5px 5px 10px #c2d0db, inset -5px -5px 10px #e5f6ff;
 }
 
 .input_cust:active {
@@ -421,8 +421,8 @@ body {
 .body_box_shadow {
   background-color: #daeaf6;
   border-radius: 2rem !important;
-  -webkit-box-shadow: 8px 8px 16px #aebbc5, -8px -8px 16px #daeaf6;
-          box-shadow: 8px 8px 16px #aebbc5, -8px -8px 16px #daeaf6;
+  -webkit-box-shadow: 8px 8px 16px #aebbc5, -8px -8px 16px #daeaf6;
+  box-shadow: 8px 8px 16px #aebbc5, -8px -8px 16px #daeaf6;
 }
 
 .modal_box_shadow {
@@ -433,8 +433,8 @@ body {
 .card_box_shadow {
   background-color: #daeaf6;
   border-radius: 2rem !important;
-  -webkit-box-shadow: 8px 8px 16px #aebbc5, -8px -8px 16px #daeaf6;
-          box-shadow: 8px 8px 16px #aebbc5, -8px -8px 16px #daeaf6;
+  -webkit-box-shadow: 8px 8px 16px #aebbc5, -8px -8px 16px #daeaf6;
+  box-shadow: 8px 8px 16px #aebbc5, -8px -8px 16px #daeaf6;
 }
 
 .toast_box_shadow {
@@ -442,8 +442,8 @@ body {
   border: 1px solid #ffffff;
   background-color: #daeaf6;
   border-radius: 2rem !important;
-  -webkit-box-shadow: 8px 8px 16px #aebbc5, -8px -8px 16px #daeaf6;
-          box-shadow: 8px 8px 16px #aebbc5, -8px -8px 16px #daeaf6;
+  -webkit-box-shadow: 8px 8px 16px #aebbc5, -8px -8px 16px #daeaf6;
+  box-shadow: 8px 8px 16px #aebbc5, -8px -8px 16px #daeaf6;
 }
 
 .badge_box_shadow {
@@ -451,16 +451,16 @@ body {
   border: 1px solid #c9d7e2;
   background-color: #daeaf6;
   border-radius: 2rem !important;
-  -webkit-box-shadow: inset 1px 1px 3px #aebbc5, inset -1px -1px 3px #daeaf6;
-          box-shadow: inset 1px 1px 3px #aebbc5, inset -1px -1px 3px #daeaf6;
+  -webkit-box-shadow: inset 1px 1px 3px #aebbc5, inset -1px -1px 3px #daeaf6;
+  box-shadow: inset 1px 1px 3px #aebbc5, inset -1px -1px 3px #daeaf6;
 }
 
 /* Table */
 .table_box_shadow {
   background-color: #daeaf6;
   border-radius: 2rem !important;
-  -webkit-box-shadow: 6px 6px 12px #b8b9be, -6px -6px 12px #daeaf6 !important;
-          box-shadow: 6px 6px 12px #b8b9be, -6px -6px 12px #daeaf6 !important;
+  -webkit-box-shadow: 6px 6px 12px #b8b9be, -6px -6px 12px #daeaf6 !important;
+  box-shadow: 6px 6px 12px #b8b9be, -6px -6px 12px #daeaf6 !important;
 }
 
 /* Table scroll for vertical */
