Improved the functionality and usability of the attendance and classroom
1. The 'DayOrderModel' and 'LeaveDateModel' have been integrated into the attendance system.
2. The Hour Model now includes a new 'semester' field.
3. When marking attendance, the system will display holidays status if it's a leave day.
4. A new Create Subject Form has been added to the classroom.
5. Unnecessary lines and spaces have been removed.

--- a/attendance/templates/attendancess/classes.html
+++ b/attendance/templates/attendancess/classes.html
@@ -50,6 +50,11 @@
     </section>
     {% endfor %}
 </article>
+{% elif status %}
+<article class="h-75 w-100 d-flex justify-content-center align-items-center my-5 py-5 px-3 my-md-0 p-md-0">
+    <h2 class="text_d_blue">{{status}}</h2>
+</article>
+
 {% else %}
 <article class="d-flex flex-column flex-md-row pt-md-2">
     <small class="form-text pt-2 pl-md-5 text-muted d-flex justify-content-center justify-content-md-start">
